...
                }
            }
    ) {
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .testTag("config_lazy_column"),
            contentPadding = PaddingValues(vertical = 8.dp)
        ) {
            items(items) { item ->
                AdminRowItem(
                    admin = item,
                    isDelay = isDelay,
...
