...
    val showExtraSocialButtons = true

    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(16.dp)
            .testTag("screen_init_content")
    ) {
        MoviePlayerSection(idMovie = param.idMovie)
        MovieInfoSection(
            title = param.title,
            description = param.description
        )
...
